--- a/startup-site/css-project-starter-code/index.html
+++ b/startup-site/css-project-starter-code/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css?family=Quicksand"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css-font-awesome.min.css"
+    />
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
@@ -36,5 +40,142 @@
         <a href="#" class="btn">Contact Us Now</a>
       </div>
     </section>
+
+    <section class="destinations">
+      <h3 class="title">Some of our destinations</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolorem,
+        quibusdam tenetur, saepe autem accusamus mollitia atque illum laboriosam
+        sequi dolores! Hic, error nam est rem suscipit perspiciatis eum deserunt
+        accusamus dolorum quaerat mollitia. Cumque commodi voluptatibus
+        blanditiis deleniti quod! Facilis ratione nulla cupiditate ipsam itaque,
+        enim nostrum in voluptatibus!
+      </p>
+      <hr />
+      <ul class="grid">
+        <li
+          class="small"
+          style="background-image: url(assets/img/mountain1.jpg)"
+        ></li>
+        <li
+          class="large"
+          style="background-image: url(assets/img/mountain2.jpg)"
+        ></li>
+        <li
+          class="large"
+          style="background-image: url(assets/img/mountain3.jpg)"
+        ></li>
+        <li
+          class="small"
+          style="background-image: url(assets/img/mountain4.jpg)"
+        ></li>
+      </ul>
+    </section>
+
+    <section class="packages">
+      <h3 class="title">Tour Packages</h3>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed sunt
+        voluptatum aliquid alias consequatur. Molestiae voluptatum possimus, nam
+        similique, sequi asperiores et dolorem sapiente laborum, debitis eum
+        doloribus natus? Laboriosam perspiciatis aspernatur esse ab consectetur
+        non totam nisi culpa, dignissimos dicta minus exercitationem maxime,
+        cupiditate sed iste eligendi nobis autem!
+      </p>
+      <hr />
+      <ul class="grid">
+        <li>
+          <i class="fa fa-compass fa-4x"></i>
+          <h4>Guided Trips</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo totam
+            pariatur quis architecto nemo in libero molestiae, corporis id
+            debitis blanditiis ipsam vitae, itaque sapiente.
+          </p>
+        </li>
+        <li>
+          <i class="fa fa-camera-retro fa-4x"></i>
+          <h4>Photo Trips</h4>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque
+            reprehenderit, repellendus doloribus voluptate cum architecto animi,
+            odit quos obcaecati veritatis fugiat reiciendis officiis nam harum.
+          </p>
+        </li>
+        <li>
+          <i class="fa fa-bicycle fa-4x"></i>
+          <h4>Bike Trips</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+            sed, facilis corporis eligendi magnam iure sunt suscipit rem?
+            Voluptatum recusandae, ducimus atque cum est nulla!
+          </p>
+        </li>
+        <li>
+          <i class="fa fa-flag-checkered fa-4x"></i>
+          <h4>Racing Trips</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            eaque numquam quaerat harum. Nihil quas doloribus ipsa quia vero
+            animi tempore accusantium, eum laudantium ad!
+          </p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="testimonials">
+      <h3 class="title">Testimonials from our adventurers:</h3>
+      <hr />
+      <p class="quote">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. In aut,
+        voluptatem eligendi dolore nobis rerum!
+      </p>
+      <p class="author">Person 1</p>
+      <p class="quote">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+      </p>
+      <p class="author">Person 2</p>
+      <p class="quote">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda iure
+        saepe maxime inventore sunt nisi reprehenderit!
+      </p>
+      <p class="author">Person 3</p>
+    </section>
+
+    <section class="contact">
+      <h3 class="title">Learn more</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio deleniti
+        laudantium assumenda molestiae omnis, excepturi perferendis error ullam
+        ab! Autem aliquid earum at veritatis, porro dolores perspiciatis omnis
+        repellat non dolorum accusantium sit assumenda velit natus ex aliquam
+        veniam dolore! Tenetur, facilis totam. Id, voluptatum mollitia quo sed
+        porro laborum.
+      </p>
+      <hr />
+      <form>
+        <input type="email" placeholder="Email" />
+        <a href="#" class="btn">Subscribe now</a>
+      </form>
+    </section>
+
+    <footer>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet porro
+        libero asperiores optio eveniet.
+      </p>
+      <ul>
+        <li>
+          <a href="#"><i class="fa fa-twitter-square"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa fa-facebooke-square"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa fa-snapchat-square"></i></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
